--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,9 @@ typings/
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
+# Typescript build output
+lib/
+
 # next.js build output
 .next
 
